完成用户注册功能

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/js/app.js": "/js/app.js?id=e55113b0c667736997e4",
+    "/css/app.css": "/css/app.css?id=d645dc32d82d80029345"
 }
